2006-05-15  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

	* pykickstart/data.py (KickstartNetworkData):  Add MTU (#191328).
	* pykickstart/parser.py (KickstartHandlers.doNetwork):  Likewise.
	* pykickstart/writer.py (KickstartWriter.doNetwork):  Likweise.

2006-05-10  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py (KickstartHandlers.doTimezone):  Accept
	--isUtc for backwards compatibility.

2006-05-04  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

2006-04-25  Chris Lumens  <clumens@redhat.com>

	* pykickstart/data.py (KickstartUserData):  Added.
	(KickstartData):  Added lists for services and users.
	* pykickstart/parser.py (KickstartParser.doServices,
	KickstartParser.doUser):  Add new command handlers.
	Consolidate code to copy from option parsers to ksdata.
	* pykickstart/writer.py (KickstartWriter.doServices,
	KickstartParser.doUser):  Add new command handlers.

2006-04-24  Chris Lumens  <clumens@redhat.com>

	* pykickstart/writer.py:  More output formatting fixes.

2006-04-19  Chris Lumens  <clumens@redhat.com>

	* pykickstart/constants.py:  Start CLEARPART_ constants at 0.

2006-04-17  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

2006-04-13  Chris Lumens  <clumens@redhat.com>

	* pykickstart/data.py (KickstartRepoData):  Added.
	(KickstartRaidData):  Initialize members to a list instead of string.
	(KickstartVolGroupData):  Likewise.
	* pykickstart/parser.py (KickstartHandlers.doRepo):  Add options.
	* pykickstart/writer.py (KickstartWriter.doRepo):  Likewise.
	(KickstartWriter.doPackages):  Reorder package output.  Output header
	options.

2006-04-11  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py (KickstartParser.addPackages):  Ignore
	whitespace before group names (#188095).

2006-03-27  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.
